--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "elog:clean": "elog clean"
   },
   "hexo": {
-    "version": "7.0.0"
+    "version": "7.3.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.569.0",
     "@elog/cli": "^0.14.0",
+    "@elog/plugin-img-r2": "^0.1.1",
     "hexo": "^7.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
@@ -27,6 +29,7 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-butterfly": "^4.10.0"
+    "hexo-theme-butterfly": "^4.10.0",
+    "hexo-webp-cloud-proxy": "^1.0.3"
   }
 }
