--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@aws-sdk/client-s3": "^3.569.0",
     "@elog/cli": "^0.14.0",
     "@elog/plugin-img-r2": "^0.1.1",
+    "adm-zip": "^0.5.9",
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.12",
     "hexo": "^7.0.0",
+    "hexo-abbrlink": "^2.2.1",
+    "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
