--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,11 @@ timezone: Asia/Shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://notion-hexo.vercel.app
-permalink: :title/
+url: https://blog.myang.me/
+permalink: post/:abbrlink.html # post为自定义前缀
+abbrlink:
+  alg: crc32   #算法： crc16(default) and crc32
+  rep: hex     #进制： dec(default) and hex
 permalink_defaults:
 pretty_urls:
   trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
@@ -102,7 +105,9 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repository: git@github.com:Timeyangzai/Timeyangzai.github.io
+  branch: main
 
 # webp cloud  pic proxy
 webp_cloud_proxy:
@@ -115,3 +120,10 @@ webp_cloud_proxy:
       proxy_url: https://4f3e171.webp.li
       # the filter priority, see https://hexo.io/api/filter.html
       priority: 10
+
+# self plugins
+plugins:
+  - AfterGenerate.js
+
+server:
+  port: 4123
